# Automated_Viscometry

./: .gitignore  20260513_Manuscript_Auto_Visco.md  BUG_FIXES_WEB_INTERFACE.md  CHANGELOG.md  CONFIGURATION_PROFILES.md  DEMO_INTERFACE.html  HOW_TO_RUN_SIMULATION.md  MIGRATION.md  MODULE_REFACTORING_NOTES.md  ORCHESTRATION_SCENARIO.md  PIPELINE_DELIVERY.md  QUICK_START.md  QUICK_START_PIPELINE.md  README.md  RHEOLOGY_PIPELINE_README.md  ROTATIONAL_DRAG_FEEDBACK_GUIDE.md  SETUP_COMPLETION.md  SIMULATION_README.md  START_SIMULATION.bat  Viscosity Readings - manual_vs_auto_drag.csv  WEB_INTERFACE_README.md  _diag_outliers 2.py  analyze_viscometry.py  app_new.js  dynamic_analysis_10_PEG300K_custom_20260604_130309.csv  dynamic_analysis_11_61kcP_custom_20260615_155224.csv  dynamic_analysis_11_61kcP_recalibration_20260615_152716.csv  dynamic_analysis_11_61kcP_sigma_custom_20260622_092413.csv  dynamic_analysis_11_61kcP_t2_custom_20260616_100804.csv  dynamic_analysis_11_61kcP_t2_custom_20260616_105347.csv  dynamic_analysis_11_61kcP_t2_custom_20260618_092253.csv  dynamic_analysis_12_5kcP_Reproducibility_Brush_cell_1_custom_20260506_145246.csv  dynamic_analysis_12_5kcP_custom_20260429_093737.csv  dynamic_analysis_1kcP_sigma_custom_20260622_083836.csv  dynamic_analysis_25kcP_custom_20260429_115451.csv  dynamic_analysis_2_cell_optimize_2_custom_20260423_085927.csv  dynamic_analysis_2_cell_optimize_3_custom_20260423_132739.csv  dynamic_analysis_4kcP_custom_20260429_090047.csv  dynamic_analysis_5_PEG300K_recalibration_PARTIAL_20260604_103720.csv  (+169 more)
Images/: Rheology_analysis_pipeline.py  (+14 more)
(+322 files in other folders)
