[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viscometry"
version = "3.0.0"
description = "Automated viscometry platform for self-driving laboratories"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pyserial>=3.5",
    "PyYAML>=6.0",
    "Flask==2.3.3",
    "flask-socketio==5.3.6",
    "python-socketio==5.9.0",
    "python-engineio==4.7.1",
    "Werkzeug==2.3.7",
    "Jinja2==3.1.2",
    "eventlet==0.33.3",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.3",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "lmfit>=1.3",
    "emcee>=3.1",
]
dev = [
    "pytest>=8.0",
    "pandas>=2.3",
]

[project.scripts]
viscometry = "viscometry.run.controller:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
